bug fix to change color of shapeshift area

--- a/xbeamerchart/stylesheet/XBeamerChartSupport.less
+++ b/xbeamerchart/stylesheet/XBeamerChartSupport.less
@@ -19,7 +19,7 @@
     width: 100%;
     border: 1px dashed #ccc;
     
-    &.active-reorder{
+    &.active-relocation{
         background: rgba(0, 255, 0, 0.3);
     }
     
